--- a/app/src/main/res/layout/activity_photo_feed.xml
+++ b/app/src/main/res/layout/activity_photo_feed.xml
@@ -13,11 +13,12 @@
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center|top"
         android:id="@+id/scrollView">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
+            android:layout_gravity="center|top"
             android:id="@+id/innerLayout"
             android:orientation="vertical">
 
