--- a/app/src/main/res/menu/item2.xml
+++ b/app/src/main/res/menu/item2.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_feed"
-        android:title="Feed"
+        android:id="@+id/action_delete"
+        android:title="Delete all"
         android:orderInCategory="100"
         app:showAsAction="always"/>
 </menu>
